fix rates button falling out of container on screen-sm

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -260,6 +260,12 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    .credit { text-align: right; }
 }
 
+@media screen and (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+   .btn-rates {
+      font-size: 0.85em;
+   }
+}
+
 @media (max-width: @screen-sm-max) {
    .logo-container .img-responsive {
       margin: 1em auto;
